--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <meta name="viewport" content= "width=device-width, initial-scale=1.0"> 
   <title>COVID-19 Updates</title>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfNafBUY8TVgLcPMCPISzgEVnSSEIU1XQ"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script async await src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfNafBUY8TVgLcPMCPISzgEVnSSEIU1XQ"></script>
 </head>
 <body>
   <div class="container">
     <center><h1>COVID-19 REALTIME UPDATE</h1><h6>Data: https://github.com/NovelCOVID/API</h6></center>
     <div class="jumbotron">
-      <center><h4>Global Map(Unfinished)</h4></center>
+      <center><h4>Global Map</h4></center>
       <div id="map" style="height: 300px">
         
       </div>
@@ -36,24 +35,41 @@
     <div class="jumbotron" id="data">
       <center><div id="today_case"></div></center>
       <div class="chart-container">
-        <h3>COVID-19 Reports Chart</h3>
-          <canvas id="mybarChart"></canvas>
+          <canvas id="mybarChart" style="height: 300px;"></canvas>
           <br>
-          <div class="col-auto">
+<!--           <div class="col-auto">
             <div class="form-check mb-2">
             <input class="form-check-input" type="checkbox" id="compare">
             <label class="form-check-label" for="compare">
           Compare
             </label>
             </div>
-          </div>
-          <canvas id="mylineChart"></canvas>
+          </div> -->
+          <!-- <canvas id="mylineChart" style="height: 300px;"></canvas> -->
         <div id="reports" style="display: inline;">
           <div id="cases"></div>
           <div id="deaths"></div>
           <div id="recovered"></div>
           <div id="active"></div>
           <div id="critical"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal" tabindex="-1" role="dialog" id="modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Aww Snap!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Seems like the Developer is on vacation..<br>Some functions may not work.</p><center><img width="300" src="img/sleeping.png"></center>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -74,10 +90,11 @@
         }catch(e){
           console.log("trying");
           initMap();
-        } 
+        }
     });
+    $("#modal").modal("show");
 
   </script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/index.js?n=3"></script>
 </body>
 </html>
